--- a/unity_test/index.html
+++ b/unity_test/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/unity_test.loader.js";
       var config = {
-        dataUrl: buildUrl + "/unity_test.data.gz",
-        frameworkUrl: buildUrl + "/unity_test.framework.js.gz",
-        codeUrl: buildUrl + "/unity_test.wasm.gz",
+        dataUrl: buildUrl + "/unity_test.data",
+        frameworkUrl: buildUrl + "/unity_test.framework.js",
+        codeUrl: buildUrl + "/unity_test.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "yuandan",
